styles/style.css
*{
    margin: 0;
    padding: 0;
    font: inherit;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
    background-color: #DC9B9B;
    font-family: Open Sans, Sans-serif, "Times New Roman", Times, serif;
}

body {
    max-width: 1200px;
    margin: 0 auto;
    margin-bottom: 40px;
    background-color: white;
}

#content {
    padding-top: 15px;
    padding-left: 35px;
    padding-right: 35px;
    padding-bottom: 35px;
}

h1 {
    color: #b04242; 
}

@media ( max-width: 1199px ) {
    h1 {
        font-size: 1.23em;
    }
}

#imgBanner {
    margin-left: 0px;
    padding-left: 0px;
    text-align: left;
    width: 100%;
    height: auto;
}

#imgServSuggestOne {
    width: 100%;
    height: auto;
    max-width: 555px;
    padding-top: 10px;
    float: left;
    padding-right: 20px;
}

#imgServSuggestTwo {
    width: 100%;
    height: auto;
    max-width: 555px;
    padding-top: 10px;
}

#p_Upper {
    background-color: lightgray;
    padding: 10px;
}

ul {
    text-align: left;
}

